se hacen cambios en el main

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -2,17 +2,17 @@
 <header class="Header-container">
   <!-- <div class="container"> -->
     <div class="row Header-containerAlignV">
-      <div class="col-xs-3 col-md-6  ">
+      <div class="col-xs-3 col-md-5">
         <img ui-sref="main" src="assets/images/header/logo.png" class="logo hidden-xs hidden-sm" ></img>
         <a ui-sref="main" class=" titulo visible-xs visible-sm">Social Soccer</a>
       </div>
-      <div class="col-xs-6 col-md-6  ">
-          <a ui-sref="profile"class="hidden-sm"><img ng-if="nav.authService.isAuthenticated()" class="img-resposive img-circle hidden-xs"  ng-src="../../assets/images/Photos/{{nav.$auth.getPayload().avatar}}"/>
-        </a>
-        <md-button name="button" type="button" ng-if="nav.authService.isAuthenticated()" ng-click="!nav.authService.logout()" ui-sref="main" class=" btn btn-danger hidden-xs hidden-sm    col-md-push-8 Usuario"><i class="fa fa-sign-out"></i> Cerrar Sesion
-</md-button>
-        <md-button ui-sref="profile" ng-if="nav.authService.isAuthenticated()" class=" btn btn-success col-xs-12 col-md-4 col-md-push-8    Usuario-2"><i class="fa fa-user"></i>
+      <div class="col-xs-6 col-md-6 col-md-push-3 ">
+          <a ui-sref="profile"class="hidden-sm"><img ng-if="nav.authService.isAuthenticated()" class="img-resposive img-circle hidden-xs"
+            ng-src="../../assets/images/Photos/{{nav.$auth.getPayload().avatar}}"/></a>
+        <md-button ui-sref="profile" ng-if="nav.authService.isAuthenticated()" class=" btn btn-success     Usuario-2"><i class="fa fa-user"></i>
           {{nav.authService.username() }} </md-button>
+          <md-button name="button" type="button" ng-if="nav.authService.isAuthenticated()" ng-click="!nav.authService.logout()" ui-sref="main"
+           class=" btn btn-danger hidden-xs hidden-sm     Usuario"><i class="fa fa-sign-out"></i> Cerrar Sesion</md-button>
 
           <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="button btn btn-primary hidden-md hidden-sm hidden-lg"><i class="fa fa-sign-out"></i> Iniciar Sesión </md-button>
         </div>
@@ -43,28 +43,28 @@
                 Nosotros</a>
             </li>
             <li >
-              <a ui-sref="users-list"  ng-hide="!nav.authService.isAdmin()" name="page4" ui-sref-active="active" class="navbar-link text-center" ng-click="nav.ocultarCollapse()">
-                Mis Usuarios</a>
+              <a ui-sref="users-list"  ng-hide="!nav.authService.isAdmin()" name="page4" ui-sref-active="active" class="navbar-link text-center " ng-click="nav.ocultarCollapse()">
+              <i class="fa fa-user"></i>  Mis Usuarios</a>
             </li>
             <li>
               <a class="navbar-link text-center  hidden-md hidden-lg  " ui-sref="main" name="button" type="button" ng-show="nav.authService.isAuthenticated()" ng-click="!nav.authService.logout()" ui-sref="main"
                   ng-click="nav.ocultarCollapse()">
 
 
-                Cerrar sesion</a>
+              <i class="fa fa-sign-out"></i>  Cerrar sesion</a>
             </li>
             <li >
               <a ui-sref="users-create"   ng-if="!nav.authService.isAdmin()" name="page5"class="navbar-link text-center visible-xs" ng-click="nav.ocultarCollapse()"><i class="fa fa-user-plus"></i>|
-                Registrarse</a>
+             Registrarse</a>
             </li>
 
             <li>
-            <a ui-sref="reservations-list"  ng-if="nav.authService.isOwner()" name="page4">
-              Mis reservas</a>
+            <a ui-sref="reservations-list"  ng-if="nav.authService.isOwner()" name="page4 "class="navbar-link text-center ">
+              <i class="fa fa-folder"></i>   Mis reservas</a>
             </li>
             <li>
             <a ui-sref="reservations"  ng-if="nav.authService.isAuthenticated()"class="text-center" name="page4">
-              Reservar</a>
+            <i class="fa fa-ball"></i> Reservar</a>
             </li>
           </ul>
         </div>
