--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -56,12 +56,44 @@
   padding: 0px 0px 0.5em
 .Btn-adsi
   margin-bottom 1em
-.Slide-padding
+.ver
+  background-color: #1c4a58;
+  font-size 17px !important
+.ver:hover
+  background-color rgba(16,22,26,0.75)
+  border-color rgba(16,22,26,0.75)
+  color white
+.mas
+  background-color: #282e34;
+.btn-lg
+  padding: 10px 195px;
   margin 0
 .TRABAJANDO
   font-size 100px
   text-align center
   color white
+
+.InfoContainer-button
+  display flex
+  justify-content flex-end
+.InfoContainer
+  padding-top 1em
+  background-color #fafafa
+
+.InfoContainer h4
+  margin 1 em 0
+  color #132E33
+  font-weight bold
+
+.imgInfo
+  width 100%
+  height 310px !important
+  border #1c4a58 solid 3px
+  border-radius 28px
+
+.Title-animated
+  font-size 60px
+  text-transform uppercase
 
 @media screen and (min-width:768px){
     .carousel-caption h3{font-size: 52px}
