se hacen cambios en el reservation

--- a/client/app/nosotros/nosotros.styl
+++ b/client/app/nosotros/nosotros.styl
@@ -39,7 +39,7 @@
 
 .Cancha-image
   display: inline-block;
-  width: 250px;
+  width: 100% !important
   border-radius: 8px;
   padding-top: .5em;
 
