--- a/client/app/reservations/reservations.styl
+++ b/client/app/reservations/reservations.styl
@@ -11,7 +11,7 @@
   max-width 80%
 
 .reloj
-  font-size 25px
+  font-size 32px
   color #276395
 .caja
   padding-right 40px
@@ -26,7 +26,11 @@
   border 1px solid #276395
 
 .input-group .form-control
-  padding-top  40px
+  margin-top 10px
+  padding-bottom: 38px;
+
+md-input-container
+  margin: 18px 20px;
 md-icon
   color #276395 !important
 .md-calendar-day-header
@@ -42,8 +46,8 @@ md-icon
   width 73%
   border-bottom-width 0px
 
-  .md-datepicker-expand-triangle
-   border-top-color: rgb(39, 99, 149);
+.md-datepicker-expand-triangle
+  border-top-color: rgb(39, 99, 149);
 
 
 md-input-container label:not(.md-container-ignore)
