se hacen modificaciones en nosostros

--- a/client/app/reservations/reservations.styl
+++ b/client/app/reservations/reservations.styl
@@ -25,15 +25,20 @@
   padding 1px 1px
   border 1px solid #276395
 
-.input-group .form-control
-  margin-top 10px
-  padding-top 10px
+.input-group .form-control, .md-input
+  margin-top 18px
   padding-bottom 10px
+  padding-right 0
+  padding-left 0
+  padding-top 0
+  height 40px
 
 md-input-container
-  margin: 18px 20px;
+  margin: 25px 17px;
+
 md-icon
   color #276395 !important
+
 .md-calendar-day-header
   background rgb(39, 99, 149)
   color white
@@ -42,6 +47,7 @@ md-icon
   background #424a50
   color white
   font-size 18px
+
 .md-icon-button + .md-datepicker-input-container
   margin-left 15px
   width 73%
