--- a/client/app/nosotros/nosotros.styl
+++ b/client/app/nosotros/nosotros.styl
@@ -44,8 +44,9 @@
   padding-top: .5em;
 
 .Cancha-Main
-  background-image: url("../../assets/images/main/3.jpg");
-
+  background-image: url("../../assets/images/main/1.jpg");
+  width 100%
+  height 435px
   background-repeat: no-repeat;
   font-size: 20px;
 
@@ -75,7 +76,15 @@
     margin-right 0
 
 
+@media (max-width: 767px)
+  .punto
+      display: inline-block !important;
+      width: 100%;
+      margin-top: 430px;
 
+@media (max-width: 960px)
+  .well
+    margin-top: 555px !important
 
 
 
