se agregan cambios en el profile

--- a/client/app/reservations/reservations.styl
+++ b/client/app/reservations/reservations.styl
@@ -27,7 +27,8 @@
 
 .input-group .form-control
   margin-top 10px
-  padding-bottom: 38px;
+  padding-top 10px
+  padding-bottom 10px
 
 md-input-container
   margin: 18px 20px;
