--- a/client/app/nosotros/nosotros.styl
+++ b/client/app/nosotros/nosotros.styl
@@ -44,10 +44,12 @@
   padding-top: .5em;
 
 .Cancha-Main
-  background-image url("../../assets/images/main/2.jpg")
-  background-size 100%
-  height 435px
+  /*background-image url("../../assets/images/main/2.jpg")*/
+  /*background-size 100%*/
+  /*height 435px*/
+  background-color rgb(39, 99, 149);
   background-repeat no-repeat
+  width 100% !important
   font-size 20px
 
 
@@ -76,15 +78,7 @@
     margin-right 0
 
 
-@media (max-width: 767px)
-  .punto
-      display: inline-block !important;
-      width: 100%;
-      margin-top: 430px;
 
-@media (max-width: 960px)
-  .well
-    margin-top: 555px !important
 
 
 
