--- a/client/app/reservations/reservations.styl
+++ b/client/app/reservations/reservations.styl
@@ -15,6 +15,7 @@
   color #276395
 .caja
   padding-right 40px
+  border 1px solid #276395
 
 .control
   font-size 25px
@@ -33,8 +34,12 @@
   padding-top 0
   height 40px
 
+md-checkbox.md-checked .md-icon
+  background-color rgb(66, 139, 202)
+
+
 md-input-container
-  margin: 25px 17px;
+  margin 25px 17px
 
 md-icon
   color #276395 !important
