--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,7 @@
         <a ui-sref="main" class=" titulo visible-xs visible-sm">Social Soccer</a>
       </div>
       <div class="col-xs-6 col-md-6 col-md-push-3 ">
-          <a ui-sref="profile"class="hidden-sm"><img ng-if="nav.authService.isAuthenticated()" class="img-resposive img-circle hidden-xs"
+          <a ui-sref="profile"class="hidden-xs"><img ng-if="nav.authService.isAuthenticated()" class="img-resposive img-circle hidden-xs"
             ng-src="../../assets/images/Photos/{{nav.authService.getProfilePicture()}}"/></a>
         <md-button ui-sref="profile" ng-if="nav.authService.isAuthenticated()" class=" btn btn-success     Usuario-2"><i class="fa fa-user"></i>
           {{nav.authService.username() }} </md-button>
