--- a/client/components/navbar/navbar.styl
+++ b/client/components/navbar/navbar.styl
@@ -31,6 +31,10 @@
   margin-top 0
   margin-bottom 0
 
+.navbar-link:focus
+  color black
+
+
 .IconSearch
   font-size 20px
 input.form-control:focus
