se realizan cambios

--- a/client/app/establishments/establishments/establishments.styl
+++ b/client/app/establishments/establishments/establishments.styl
@@ -1,2 +1,13 @@
 .ver
   align-items center
+.image
+  background #282e34;
+
+.Establecimiento
+  padding 9px
+  margin-top 34px
+  background #282e34
+  color white
+
+.margen
+  margin-left 70px
