se realizan cambios en establecimientos

--- a/client/app/establishments/establishments/establishments.styl
+++ b/client/app/establishments/establishments/establishments.styl
@@ -6,8 +6,20 @@
 .Establecimiento
   padding 9px
   margin-top 34px
+    /*margin-left 5px*/
+
   background #282e34
   color white
 
 .margen
-  margin-left 70px
+  margin-left 13px
+.nombre
+  padding-top 35px
+  padding-bottom 25px
+  background #282e34
+  color white
+  margin 0
+.color
+  background #276395
+.img-thumbnail
+  border 3px solid #fff !important
