--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -63,8 +63,8 @@
               <i class="fa fa-folder"></i>   Mis reservas</a>
             </li>
             <li>
-            <a ui-sref="reservations"  ng-if="nav.authService.isAuthenticated()"class="text-center" name="page4">
-            <i class="fa fa-ball"></i> Reservar</a>
+            <a ui-sref="establishments"  ng-if="nav.authService.isAuthenticated()"class="text-center" name="page4">
+            <i class="fa fa-ball"></i> establecimiento</a>
             </li>
           </ul>
         </div>
