se realizan cambios en canchas

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -63,7 +63,7 @@
               <i class="fa fa-folder"></i>   Mis reservas</a>
             </li>
             <li>
-            <a ui-sref="establishments"  ng-if="nav.authService.isAuthenticated()"class="text-center" name="page4">
+            <a ui-sref="establishments"  ng-if="nav.authService.isAuthenticated()"class="text-center navbar-link" name="page4">
             <i class="fa fa-ball"></i> establecimiento</a>
             </li>
           </ul>
