se realizan cambios

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -44,7 +44,7 @@
             </li>
             <li >
               <a ui-sref="users-list"  ng-hide="!nav.authService.isAdmin()" name="page4" ui-sref-active="active" class="navbar-link text-center " ng-click="nav.ocultarCollapse()">
-              <i class="fa fa-user"></i>  Mis Usuarios</a>
+              <i class="fa fa-user"></i>| Mis Usuarios</a>
             </li>
             <li>
               <a class="navbar-link text-center  hidden-md hidden-lg  " ui-sref="main" name="button" type="button" ng-show="nav.authService.isAuthenticated()" ng-click="!nav.authService.logout()" ui-sref="main"
