--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -51,7 +51,7 @@
                   ng-click="nav.ocultarCollapse()">
 
 
-              <i class="fa fa-sign-out"></i>  Cerrar sesion</a>
+              <i class="fa fa-sign-out"></i>| Cerrar sesion</a>
             </li>
             <li >
               <a ui-sref="users-create"   ng-if="!nav.authService.isAdmin()" name="page5"class="navbar-link text-center visible-xs" ng-click="nav.ocultarCollapse()"><i class="fa fa-user-plus"></i>|
@@ -60,11 +60,11 @@
 
             <li>
             <a ui-sref="reservations-list"  ng-if="nav.authService.isOwner()" name="page4 "class="navbar-link text-center ">
-              <i class="fa fa-folder"></i>   Mis reservas</a>
+              <i class="fa fa-folder"></i>| Mis reservas</a>
             </li>
             <li>
             <a ui-sref="establishments"  ng-if="nav.authService.isAuthenticated()"class="text-center" name="page4">
-            <i class="fa fa-ball"></i> establecimiento</a>
+              <i class="fa fa-home"></i>| Establecimiento</a>
             </li>
           </ul>
         </div>
