se hacen cambios en pirfil y el na barra de navegacion

--- a/client/app/login/login.styl
+++ b/client/app/login/login.styl
@@ -12,3 +12,15 @@
     display: flex
     justify-content: space-between
     align-items: center
+.checkbox
+  width 25px
+  height 25px
+
+.Check
+  margin-left 5px
+  font-size 18px
+  border-bottom solid 1px #276395
+
+.form-group
+  margin-bottom 15px
+  margin-left 56px
