--- a/client/app/profile/profile.styl
+++ b/client/app/profile/profile.styl
@@ -19,18 +19,21 @@
 .profile-header-background img {
   width: 100%;
   height: 310px;
-  margin-top: 31px;
+  margin-top: 1px;
 }
 
 .profile-info-left {
   position: relative;
   top: -92px;
 }
+
+
 .profile-info-left img.avatar {
   border: 2px solid #fff;
-  width: 100%;
-  margin-top: -150px;
-  height: 500px;}
+  width: 50%;
+  margin-top: -100px;
+  margin-left: 86px;
+  height: 385px;}
 .profile-info-left h2 {
   margin-bottom: 30px;
 }
