--- a/client/app/profile/profile.styl
+++ b/client/app/profile/profile.styl
@@ -69,12 +69,22 @@
   padding: 30px 0;
   background-color: transparent;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px)
   .profile-info-right {
     position: relative;
     top: -70px;
   }
-}
+
+
+@media (min-width: 992px)
+  .col-md-push-4, .col-md-push-5 {
+    left: 61.666667%;
+  }
+
+@media (min-width: 992px)
+  .col-md-2 {
+      width: 4.666667%;
+  }
 
 .user-follower,
 .user-following {
