--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,7 @@
         <a ui-sref="main" class=" titulo ">Social Soccer</a>
       </div>
 
-      <div class="col-xs-2 col-sm-3 col-md-3 col-md-push-6 col-sm-push-5  ">
+      <div class="col-xs-2 col-sm-3 col-md-2 col-md-push-5 col-sm-push-5  ">
         <a ui-sref=""class=""><img ng-if="nav.authService.isAuthenticated()" class="img-resposive img-circle "
           ng-src="../../assets/images/Photos/{{nav.authService.getProfilePicture()}} "/></a>
 
@@ -28,7 +28,7 @@
                   <li>
                     <a ui-sref="profile">
                       <i class="fa fa-user"></i>
-                      Profile</a>
+                      Perfil</a>
                     </li>
                     <li>
                       <a href="#" ng-click="vm.AuthService.logout()">
