se realizan cambios en reservas list

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -88,7 +88,7 @@
             </li>
             <li>
             <a ui-sref="establishments"  ng-if="nav.authService.isAuthenticated()"class="text-center" name="page4">
-              <i class="fa fa-home"></i>| Establecimiento</a>
+              <i class="fa fa-home"></i>| Establecimientos</a>
             </li>
           </ul>
         </div>
