--- a/client/app/nosotros/nosotros.styl
+++ b/client/app/nosotros/nosotros.styl
@@ -47,7 +47,7 @@
   /*background-image url("../../assets/images/main/2.jpg")*/
   /*background-size 100%*/
   /*height 435px*/
-  background-color rgb(39, 99, 149);
+  background-color #a4bdd2;
   background-repeat no-repeat
   width 100% !important
   font-size 20px
@@ -97,7 +97,7 @@
 
     }
 .punto
-  background-color primary
+  background-color #a4bdd2;
   margin-bottom 0
   border 0px solid #282e34 !important
 .Nosotros
@@ -108,7 +108,7 @@
       padding 0
 
 .Oculto
-  background-color white
+  background-color #a4bdd2;
   margin-bottom 2px !important
 
 
