--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -46,7 +46,46 @@
   </div>
 
     <hr>
-       <div class="row text-center">
+
+
+    <header class="redes">
+          <h4>Nuestras Redes</h4>
+          <ul>
+              <li>
+                  <a href="#">
+                      <figure class="pulse">
+                        <img src="assets/images/footer/facebook.png" >
+                          <figcaption>Facebook</figcaption>
+                      </figure>
+                  </a>
+              </li>
+              <li>
+                  <a href="#">
+                      <figure>
+                        <img src="assets/images/footer/instagram.png">
+                          <figcaption>Instagram</figcaption>
+                      </figure>
+                  </a>
+              </li>
+              <li>
+                  <a href="#">
+                      <figure>
+                        <img src="assets/images/footer/gmail.png">
+                          <figcaption>Gmail</figcaption>
+                      </figure>
+                  </a>
+              </li>
+              <li>
+                  <a href="#">
+                      <figure>
+                        <img src="assets/images/footer/Twitter.png">
+                          <figcaption>Twitter</figcaption>
+                      </figure>
+                  </a>
+              </li>
+          </ul>
+      </header>
+       <!-- <div class="row text-center">
 
          <h4 class="opacidad"><strong>Social Soccer</strong></h4>
 
@@ -57,5 +96,5 @@
          <a href="#" class="social"><i class="fa fa-instagram" aria-hidden="true"></i></a>
          <a href="#" class="social"><i class="fa fa-twitter" aria-hidden="true"></i></a>
          <a href="#" class="social"><i class="fa fa-google" aria-hidden="true"></i></a>
-       </div>
+       </div> -->
   </section>
