--- a/client/components/footer/footer.styl
+++ b/client/components/footer/footer.styl
@@ -46,3 +46,50 @@
   color: #6d6d6d
 .btn-primary
   font-size: 12px
+
+
+
+
+
+
+
+.redes{
+  padding: 40px 0px;
+  }
+
+.redes h4{
+  color: #ffffff;
+  text-align: center;
+  margin: 0px;
+  font-family: arial;
+  font-size: 25px;
+  text-shadow: 0px 2px 2px rgba(0,0,0,.4);
+}
+
+.redes ul{
+  padding: 0px;
+  text-align: center;
+  list-style: none;
+  }
+
+.redes ul li{
+  display: inline-block;
+}
+
+.redes ul li a{
+  color: #ffffff;
+  text-decoration: none;
+  }
+
+.redes figure figcaption{
+  font-family: arial;
+}
+
+.redes figure img{
+  transition: 1.5s all;
+  width: 64px;
+  }
+
+.redes figure img:hover{
+  transform: rotate(360deg);
+}
