--- a/client/components/navbar/navbar.styl
+++ b/client/components/navbar/navbar.styl
@@ -7,10 +7,10 @@
   justify-content center
 
 .Header-container
-  background: rgba(17, 24, 31, 0.9)
+  background: rgb(39, 99, 149)
   color white
 .MenuContainer
-  background #276395
+  background #ffff
 .logo
   width 25%
   height 70px
@@ -18,11 +18,14 @@
   border-right solid 2px white
   margin-right -20px
   text-shadow 0 7px 3px rgba(0, 0, 0, .6)
-  padding-right 15px
+  padding-right 7px
+
+.navbar
+  margin-bottom: 1px;
+
 
 .img-circle
   border-radius 2%
-
 .Drp-mnu
   font-size 30px
 @media (min-width: 992px)
@@ -56,10 +59,13 @@ input.form-control:focus
   display flex
   width 94%
 .navbar-nav > li > a
-  color white
+  color black
+  text-shadow: 0 7px 3px rgba(0,0,0,0.2);
 .navbar-nav > li > a:hover
   color black
   color #363636
+.img-circle
+  padding: 3px;
 
 .navbar-nav > li > a:hover
   color black
