se hacen cambios en la barra

--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -52,34 +52,34 @@
           <h4>Nuestras Redes</h4>
           <ul>
               <li>
-                  <a href="#">
-                      <figure class="pulse">
-                        <img src="assets/images/footer/facebook.png" >
-                          <figcaption>Facebook</figcaption>
+                  <a href="https://www.facebook.com/socialsoccer">
+                      <figure  >
+                        <img src="assets/images/footer/facebook.png" class="" >
+                          <!-- <h5>Facebook</h5> -->
+                      </figure>
+                  </a>
+              </li>
+              <li>
+                  <a href="https://www.instagram.com/socialsoccer">
+                      <figure>
+                        <img src="assets/images/footer/instagram.png" class="pulse">
+                          <!-- <h5>Instagram</h5> -->
                       </figure>
                   </a>
               </li>
               <li>
                   <a href="#">
                       <figure>
-                        <img src="assets/images/footer/instagram.png">
-                          <figcaption>Instagram</figcaption>
+                        <img src="assets/images/footer/gmail.png" class="">
+                          <!-- <h5>Gmail</h5> -->
                       </figure>
                   </a>
               </li>
               <li>
-                  <a href="#">
-                      <figure>
-                        <img src="assets/images/footer/gmail.png">
-                          <figcaption>Gmail</figcaption>
-                      </figure>
-                  </a>
-              </li>
-              <li>
-                  <a href="#">
+                  <a href="https://twitter.com/socialsoccer">
                       <figure>
                         <img src="assets/images/footer/Twitter.png">
-                          <figcaption>Twitter</figcaption>
+                          <!-- <h5>Twitter</h5> -->
                       </figure>
                   </a>
               </li>
