--- a/client/components/footer/footer.styl
+++ b/client/components/footer/footer.styl
@@ -86,10 +86,16 @@
 }
 
 .redes figure img{
-  transition: 1.5s all;
+  transition: 2s all;
   width: 64px;
   }
 
+
 .redes figure img:hover{
-  transform: rotate(360deg);
+
+transform: scale3d(2.05, 2.05, 2.05);
+position: relative;
+/*background: white*/
+border-radius 5px
+padding-top: 10px
 }
