--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -82,8 +82,8 @@
               <i class="fa fa-sign-out"></i>|Cerrar sesion</a>
             </li> -->
             <li >
-              <a ui-sref="users-create"   ng-if="!nav.authService.isAdmin()" name="page5"class="navbar-link text-center visible-xs" ng-click="nav.ocultarCollapse()"><i class="fa fa-user-plus"></i>|
-             Registrarse</a>
+              <a ui-sref="users-create"   ng-if="!nav.authService.isAdmin()" name="page5"class="navbar-link text-center visible-xs" ng-click="nav.ocultarCollapse()">
+                <i class="fa fa-user-plus"></i>| Registrarse</a>
             </li>
 
             <li>
