--- a/client/components/navbar/navbar.styl
+++ b/client/components/navbar/navbar.styl
@@ -61,6 +61,7 @@ input.form-control:focus
 .navbar-nav > li > a
   color black
   text-shadow: 0 7px 3px rgba(0,0,0,0.2);
+  transition: 1s all;
 .navbar-nav > li > a:hover
   color black
   color #363636
@@ -69,8 +70,11 @@ input.form-control:focus
 
 .navbar-nav > li > a:hover
   color black
-  background-color white
-
+  background-color #f2f2f2f2
+  transform: scale3d(1.2, 1.2, 1.2);
+  /*position: relative;*/
+  /*background: white*/
+  border-radius 5px
 .Menucontainer
   background-color #f7f7f9
 
