se realizan cambios en el main y se arregla scroll

--- a/client/app/login/login.styl
+++ b/client/app/login/login.styl
@@ -21,6 +21,5 @@
   font-size 18px
   border-bottom solid 1px #276395
 
-.form-group
-  margin-bottom 15px
-  margin-left 56px
+.form-groupo
+  justify-content center
