--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,7 @@
         <a ui-sref="main" class=" titulo ">Social Soccer</a>
       </div>
 
-      <div class="col-xs-2 col-sm-3 col-md-2 col-md-push-5 col-sm-push-5  ">
+      <div class="col-xs-2 col-sm-3 col-md-2 col-md-push-5 col-sm-push-3  ">
 
         <md-buttom ui-sref="#"class=""><img ng-if="nav.authService.isAuthenticated()" class="img-resposive img-circle "
           ng-src="../../assets/images/Photos/{{nav.authService.getProfilePicture()}} "/></md-buttom>
@@ -20,7 +20,7 @@
 
         <!-- <md-button ui-sref="profile" ng-if="nav.authService.isAuthenticated()" class=" btn btn-success     Usuario-2"><i class="fa fa-user"></i>
           {{nav.authService.username() }} </md-button> -->
-          <div class="col-xs-2 col-md-1 col-md-push-4 col-sm-push-3">
+          <div class="col-xs-2 col-md-1 col-md-push-4 col-sm-push-1">
               <a class="dropdown" ng-if="nav.authService.isAuthenticated()" >
                 <a href="#" class="dropdown-toggle"  data-toggle="dropdown" aria-expanded="false">
                   <div class="">
@@ -45,7 +45,7 @@
                 </a>
               </div>
 
-      <div class="col-xs-2  col-sm-push-2  ">
+      <div class="col-xs-2 ">
         <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navMenu" >
           <i class="fa fa-bars " aria-hidden="true"></i>
         </button>
