se hacen cambios

--- a/client/components/navbar/navbar.styl
+++ b/client/components/navbar/navbar.styl
@@ -20,6 +20,7 @@
   text-shadow 0 7px 3px rgba(0, 0, 0, .6)
   padding-right 7px
 
+
 .navbar
   margin-bottom: 1px;
 
@@ -45,8 +46,7 @@
   margin-top 0
   margin-bottom 0
 
-.navbar-link:focus
-  color black
+
 
 
 .IconSearch
@@ -93,7 +93,9 @@ a
   color white
 
 a:hover
-  color lightgreen
+  color gray
+a:focus
+  color gray
 button
   font-size: 25px;
 .Enlace
