se hacen cambios en reservas list

--- a/client/app/profile/profile.styl
+++ b/client/app/profile/profile.styl
@@ -22,18 +22,23 @@
   margin-top: 1px;
 }
 
+.table > tbody > tr > td
+  padding 8px 5px
+
 .profile-info-left {
   position: relative;
   top: -92px;
 }
 
+.btn-block
+  margin-top 5px
 
 .profile-info-left img.avatar {
   border: 2px solid #fff;
-  width: 50%;
-  margin-top: -100px;
-  margin-left: 111px;
-  height: 385px;}
+  width: 100%;
+  margin-top: -50px;
+  /*margin-left: 111px;*/
+  height: 290px;}
 .profile-info-left h2 {
   margin-bottom: 30px;
 }
@@ -76,15 +81,19 @@
   }
 
 
-@media (min-width: 992px)
+/*@media (min-width: 992px)
   .col-md-push-4, .col-md-push-5 {
     left: 61.666667%;
-  }
+  }*/
 
-@media (min-width: 992px)
+/*@media (min-width: 320px)
+  .profile-info-left img.avatar{
+    margin-left: 72px;
+ }*/
+/*@media (min-width: 992px)
   .col-md-2 {
       width: 4.666667%;
-  }
+  }*/
 
 .user-follower,
 .user-following {
