--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -1,15 +1,18 @@
+.Carousel-container
+  margin-top: 118px;
+
 .carousel-caption
-    position: absolute
-    right: 15%
-    bottom: 35px
-    width: 60%
-    left: 15%
-    z-index: 10
-    padding-top: 20px
-    padding-bottom: 20px
-    color: #fff
-    text-align: left
-    text-shadow: 0 1px 2px rgba(0, 0, 0, .6)
+  position: absolute
+  right: 15%
+  bottom: 35px
+  width: 60%
+  left: 15%
+  z-index: 10
+  padding-top: 20px
+  padding-bottom: 20px
+  color: #fff
+  text-align: left
+  text-shadow: 0 1px 2px rgba(0, 0, 0, .6)
 
 
 .Carousel-padding
@@ -173,8 +176,9 @@
 
 
 
-.Portfolio
+.Portafolio
 	margin-bottom 3em
+  margin-top 111px
 .Portfolio-image
 	background-image url(../assets/images/ContactUs/contactUs.jpg)
 	background-size cover
@@ -189,13 +193,13 @@
 	background-color #000
 	position absolute
 	opacity 0.7
-.Portfolio-title
+/*.Portfolio-title
 	color #276395
 	font-size 55px
 	font-weight 600
 	margin-top 0
 	padding-top 1em
-	text-align center
+	text-align center*/
 .Portfolio .gallery-grids
   margin 0
 .Portfolio .nav-tabs
