--- a/client/app/nosotros/nosotros.styl
+++ b/client/app/nosotros/nosotros.styl
@@ -20,7 +20,7 @@
   margin-bottom: 1em;
 
 .Tittle
-  color Lightblue
+  color white
 .Text
   color white
 
@@ -47,7 +47,7 @@
   /*background-image url("../../assets/images/main/2.jpg")*/
   /*background-size 100%*/
   /*height 435px*/
-  background-color #a4bdd2;
+  background-color #276395;
   background-repeat no-repeat
   width 100% !important
   font-size 20px
@@ -97,7 +97,7 @@
 
     }
 .punto
-  background-color #a4bdd2;
+  /*background-color #a4bdd2;*/
   margin-bottom 0
   border 0px solid #282e34 !important
 .Nosotros
@@ -164,13 +164,13 @@
       font-size: 1.8em;
     }
 .firstinfo .profileinfo h3 {
-      font-size: 1.2em;
-      color: #009688;
+      font-size: 19px;
+      color: white;
       font-style: italic;
     }
 .firstinfo .profileinfo p.bio {
-      padding: 10px 0px;
-      color: #5A5A5A;
+      /*padding: 10px 62px;*/
+      color: black;
       line-height: 1.2;
       font-style: initial;
     }
